Extract build-logic (#1745)